<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background6">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_firstname"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/edittext_lastname"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/last_name" />
    <EditText
        android:id="@+id/edittext_mail"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/mail"
        android:hint="@string/mail" />

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/phone"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:id="@+id/checkbox_password_register"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:text="@string/login"/>

    </LinearLayout>


</LinearLayout>